# liftoff

./: .gitignore  CMakeLists.txt
Source/: pdxinfo
src/: coregame.c  coregame.h  game.c  game.h  input.c  input.h  main.c  resources.h  types.h
